first react component added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import MyReactComponent from '../components/MyReactComponent.jsx';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -7,5 +8,6 @@ import Layout from '../layouts/Layout.astro';
 		<h1 class="text-3xl font-bold underline">
 			Hello world!
 		  </h1>
+		  <MyReactComponent />
 	</main>
 </Layout>
