--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import MyReactComponent from '../components/MyReactComponent.jsx';
 	<main>
 		<h1 class="text-3xl font-bold underline">
 			Hello world!
+			todo bien
 		  </h1>
-		  <MyReactComponent />
+		  <MyReactComponent client:load />
 	</main>
 </Layout>
