--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,28 @@ import MyReactComponent from "../components/MyReactComponent.jsx";
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<div class="bg-white py-12">
+			<div class="mx-auto max-w-7xl px-6 lg:px-8">
+				<div class="mx-auto max-w-2xl lg:text-center">
+					<h2
+						class="text-base font-semibold leading-7 text-indigo-600"
+					>
+						Language Translation
+					</h2>
+					<p
+						class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"
+					>
+						ChatGPT Traductor
+					</p>
+					<p class="mt-6 text-lg leading-8 text-gray-600">
+						Harnessing the power of advanced AI technology to break
+						down language barriers, enhance cross-cultural
+						communication, and create a more interconnected global
+						community through seamless language translation.
+					</p>
+				</div>
+			</div>
+		</div>
 		<MyReactComponent client:load />
 	</main>
 </Layout>
